test/org/midica/testfiles/failing/eff-func-tune-fine-invalid-2.midica
INCLUDE inc/instruments.midica


0: fine_tune.set(1.0001)
